--- a/app/src/main/res/layout/fragment_update_note.xml
+++ b/app/src/main/res/layout/fragment_update_note.xml
@@ -1,14 +1,80 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".updateNoteFragment">
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
+    <layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        tools:context=".UpdateNoteFragment"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="match_parent">
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical">
+
+    <androidx.cardview.widget.CardView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="5dp"
+        android:background="@color/white"
+        android:layout_margin="16dp">
+
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+    <EditText
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@android:color/transparent"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
+        android:inputType="text"
+        android:hint="Type your title"
+        android:ems="10"
+        android:id="@+id/etNoteTitleUpdate"/>
+
+    <EditText
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@android:color/transparent"
+        android:textSize="20sp"
+        android:textColorHint="@color/hintColor"
+        android:textColor="@color/black"
+        android:inputType="textMultiLine"
+        android:hint="Type something..."
+        android:ems="10"
+        android:id="@+id/etNoteBodyUpdate"
+        android:gravity="start|top"
+        android:layout_marginTop="20dp"/>
+
+</LinearLayout>
+
+</androidx.cardview.widget.CardView>
+
+</LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/fab_done"
+        android:contentDescription="bersyte"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_done"
+        android:tintMode="@color/white"
+        android:backgroundTint="@color/colorPrimary"
+        app:borderWidth="0dp"
+        android:clickable="true"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="24dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
