--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.notetakingapp.HomeFragment"
+        android:name="com.example.notetakingapp.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/newNoteFragment"
-        android:name="com.example.notetakingapp.newNoteFragment"
+        android:name="com.example.notetakingapp.fragments.newNoteFragment"
         android:label="fragment_new_note"
         tools:layout="@layout/fragment_new_note" />
     <fragment
         android:id="@+id/updateNoteFragment"
-        android:name="com.example.notetakingapp.updateNoteFragment"
+        android:name="com.example.notetakingapp.fragments.updateNoteFragment"
         android:label="fragment_update_note"
         tools:layout="@layout/fragment_update_note" />
 </navigation>
