--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,15 +9,36 @@
         android:id="@+id/homeFragment"
         android:name="com.example.notetakingapp.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_newNoteFragment"
+            app:destination="@id/newNoteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_updateNoteFragment"
+            app:destination="@id/updateNoteFragment" />
+    </fragment>
     <fragment
         android:id="@+id/newNoteFragment"
         android:name="com.example.notetakingapp.fragments.newNoteFragment"
         android:label="fragment_new_note"
-        tools:layout="@layout/fragment_new_note" />
+        tools:layout="@layout/fragment_new_note" >
+        <action
+            android:id="@+id/action_newNoteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/updateNoteFragment"
         android:name="com.example.notetakingapp.fragments.updateNoteFragment"
         android:label="fragment_update_note"
-        tools:layout="@layout/fragment_update_note" />
+        tools:layout="@layout/fragment_update_note" >
+        <action
+            android:id="@+id/action_updateNoteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+
+        <argument
+            android:name="note"
+            app:argType="com.example.notetakingapp.model.Note"
+            app:nullable="true"
+            />
+    </fragment>
 </navigation>
