--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -11,9 +11,9 @@
         android:layout_height="match_parent"
         android:id="@+id/cardView"
         android:background="@color/white"
-        android:cardElevation="8dp"
         android:layout_margin="8dp"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="5dp"
+        >
         
         <LinearLayout
             android:layout_width="match_parent"
